edition = "2023";

package common.v1;

option go_package = "github.com/dynoinc/skyvault/gen/proto/common/v1";

import "google/protobuf/timestamp.proto";

message L0Batch {
  enum State {
    UNSPECIFIED = 0;
    NEW = 1;
    MERGING = 2;
    MERGED = 3;
  }

  string path = 1;
  State state = 2;
  google.protobuf.Timestamp created_at = 3;

  // Stats
  int64 size_bytes = 4;
  string min_key = 5;
  string max_key = 6;
}

message Partition {
}
